--- a/finalita/index.html
+++ b/finalita/index.html
@@ -36,7 +36,7 @@
 
 
 
-<link href="/css/custom.css?1687700723" rel="stylesheet">
+<link href="/css/custom.css?1687701384" rel="stylesheet">
 
 
 
@@ -47,7 +47,7 @@
 
 
     
-    <link rel="stylesheet" href="https://www.noialia.it/style.css"> 
+    <link rel="stylesheet" href="/style.css"> 
 
 
 
@@ -59,7 +59,7 @@
 <link href="/css/owl.theme.css" rel="stylesheet">
 
 
-<link rel="alternate" href="https://www.noialia.it/index.xml" type="application/rss+xml" title="Universal">
+<link rel="alternate" href="/index.xml" type="application/rss+xml" title="Universal">
 
 
 
@@ -72,9 +72,9 @@
 <meta property="og:site_name" content="Universal">
 <meta property="og:title" content="Finalita">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://www.noialia.it/finalita/" />
+<meta property="og:url" content="/finalita/" />
 <meta property="og:description" content="Site template made by Devcows using Hugo">
-<meta property="og:image" content="https://www.noialia.it/img/sharing-default.png">
+<meta property="og:image" content="img/sharing-default.png">
 <meta property="og:image:type" content="image/png">
 
 
@@ -91,7 +91,7 @@
 <meta name="twitter:site" content="@GoHugoIO">
 <meta name="twitter:title" content="Finalita">
 
-<meta name="twitter:image" content="https://www.noialia.it/img/sharing-default.png">
+<meta name="twitter:image" content="img/sharing-default.png">
 
 <meta name="twitter:description" content="Site template made by Devcows using Hugo">
 
